--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
